# 7542-Taller-Pages

./: CMakeLists.txt  README.md
Diagramas/: diagramaCliente.txt  diagramaDeClases.txt  diagramaServerGeneral.txt
client_src/: Client.cpp  Client.h  main.cpp
common_src/: Bloquear.cpp  Bloquear.h  InvalidFileException.cpp  InvalidFileException.h  InvalidResourceException.cpp  InvalidResourceException.h  Lock.cpp  Lock.h  OSexception.cpp  OSexception.h  Socket.cpp  Socket.h  SocketException.cpp  SocketException.h  Thread.cpp  Thread.h  invalidFile.cpp  invalidFile.h  invalidFileException.cpp  invalidFileException.h  socketException.cpp  socketException.h
server_src/: ClientHandler.cpp  ClientHandler.h  Controlador.cpp  Controlador.h  Controller.cpp  Controller.h  PetitionGet.cpp  PetitionGet.h  PetitionGetRoot.cpp  PetitionGetRoot.h  PetitionInvalid.cpp  PetitionInvalid.h  PetitionLogic.cpp  PetitionLogic.h  PetitionParser.cpp  PetitionParser.h  PetitionPost.cpp  PetitionPost.h  PetitionPostRoot.cpp  PetitionPostRoot.h  PetitionProcessor.cpp  PetitionProcessor.h  PrintMonitor.cpp  PrintMonitor.h  RequestsManager.cpp  RequestsManager.h  ResourcesMonitor.cpp  ResourcesMonitor.h  ResourcesRepository.cpp  ResourcesRepository.h  Server.cpp  Server.h  main.cpp  petitionPost.cpp  petitionPost.h  petitionPostRoot.cpp  petitionPostRoot.h  printMonitor.cpp  printMonitor.h  resourcesMonitor.cpp  (+3 more)
